# ffmpeg_samples

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_ffmpeg_wrappers.cpp
docs/en/: audio_samples.md  audio_transition.md  ffmpeg_api.md  video_decoder.md  video_encoder.md  video_filter.md  video_info.md  video_transcoder.md  video_transition.md
docs/ko/: audio_samples.md  audio_transition.md  ffmpeg_api.md  video_decoder.md  video_encoder.md  video_filter.md  video_info.md  video_transcoder.md  video_transition.md
include/: ffmpeg_wrappers.hpp
src/: audio_decoder.cpp  audio_encoder.cpp  audio_equalizer.cpp  audio_format_converter.cpp  audio_info.cpp  audio_mixer.cpp  audio_noise_reduction.cpp  audio_resampler.cpp  streaming_server.cpp  video_decoder.cpp  video_encoder.cpp  video_filter.cpp  video_info.cpp  video_metadata.cpp  video_splitter.cpp  video_stabilization.cpp  video_subtitles.cpp  video_transcoder.cpp
src/audio/: audio_beat_detector.cpp  audio_chorus.cpp  audio_compressor.cpp  audio_decoder.cpp  audio_delay.cpp  audio_distortion.cpp  audio_ducking.cpp  audio_equalizer.cpp  audio_flanger.cpp  audio_format_converter.cpp  audio_gate.cpp  audio_info.cpp  audio_limiter.cpp  audio_mastering.cpp  audio_mixer.cpp  audio_mixer_advanced.cpp  audio_noise_reduction.cpp  audio_normalization.cpp  audio_phaser.cpp  audio_pitch_shift.cpp  audio_resampler.cpp  audio_reverb.cpp  audio_reverse.cpp  audio_silence_detect.cpp  audio_spectrum.cpp  audio_splitter.cpp  audio_stereo_tool.cpp  audio_transition.cpp  audio_tremolo.cpp  audio_waveform.cpp  device_capture_mic.cpp
src/streaming/: streaming_hls_segmenter.cpp  streaming_rtmp_push.cpp  streaming_server.cpp
src/video/: device_capture_webcam.cpp  parallel_transcoder.cpp  simple_player_sync.cpp  subtitle_generator.cpp  video_concatenate.cpp  video_crop_rotate.cpp  video_encoder.cpp  video_filter_complex.cpp  video_gif_creator.cpp  video_hw_decode.cpp  video_hw_encode.cpp  video_info.cpp  video_keyframe_extract.cpp  video_reverse.cpp  video_slideshow.cpp  video_speed_control.cpp  video_thumbnail.cpp  video_transcoder.cpp  video_transition.cpp  video_watermark.cpp
tests/: CMakeLists.txt  test_ffmpeg_wrappers.cpp
